- Renamed to Sound and Music/FX - Fixed logo sizing issue

--- a/games/index.html
+++ b/games/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Games | Langenium
     </title>
+    <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
   </head>
   <body>
@@ -27,12 +28,13 @@
         <p>Interactive demos of the game are coming soon!</p>
         <ul>
           <li><a href="/games/character_test.html">Character test</a></li>
-          <li><a href="/games/character_test.html">Music</a></li>
+          <li><a href="/games/sound.html">Sound (Music + SFX)</a></li>
         </ul><img src="/universe/new/exordium-poster-01.png">
       </div>
     </div>
   </body>
   <script src="/vendor/jquery/dist/jquery.min.js"></script>
+  <script src="/vendor/Semantic-UI/dist/semantic.min.js"></script>
   <script src="/vendor/threejs/build/three.min.js"></script>
   <script src="/vendor/threejs/examples/js/controls/OrbitControls.js"></script>
   <script src="/vendor/threejs/examples/js/loaders/ColladaLoader.js"></script>
