--- a/games/sound.html
+++ b/games/sound.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Character Test | Game Demos | Langenium
+    <title>Sound (Music + SFX) | Game Demos | Langenium
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
@@ -21,9 +21,13 @@
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <h3>Character Test</h3>
-        <p>Epoch Exordium's protagonist is Jack. This is a Live2D and Three.JS integration test to demonstrate the use of multiple Live2D canvases to simulate multiple sides of the 2D character in 3D space.</p>
-        <div class="character_test"></div>
+        <h3>Sound (Music + SFX)</h3>
+        <p>These tests are used to evaluate various frameworks and techniques for producing sound and music in the browser (and eventually in the game).</p>
+        <div class="sound">
+          <h4>First attempt</h4>
+          <p> </p>
+          <div class="ui labeled icon button"> <i class="play icon"></i>Play</div>
+        </div>
       </div>
     </div>
   </body>
@@ -259,7 +263,7 @@ void main()
 }
   </script>
   <script src="/dist/logo.js"></script>
-  <script src="/dist/character_test.js"></script>
+  <script src="/dist/sound.js"></script>
   <script>
     // Facebook Like Button.
     (function(d, s, id) {
