--- a/wiki/technology_of_2099.html
+++ b/wiki/technology_of_2099.html
@@ -3,6 +3,7 @@
   <head>
     <title>Technology of 2099 | Wiki | Langenium
     </title>
+    <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
   </head>
   <body>
@@ -85,6 +86,7 @@
     </div>
   </body>
   <script src="/vendor/jquery/dist/jquery.min.js"></script>
+  <script src="/vendor/Semantic-UI/dist/semantic.min.js"></script>
   <script src="/vendor/threejs/build/three.min.js"></script>
   <script src="/vendor/threejs/examples/js/controls/OrbitControls.js"></script>
   <script src="/vendor/threejs/examples/js/loaders/ColladaLoader.js"></script>
