--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
       </div>
       <div class="row">
         <div class="news">
-          <h2>News</h2><h3>THREE.JS and Live2D are up and running</h3>
+          <h2>News</h2><h3>Working with audio, making songs and fighting round the world!</h3>
+
+<p><em>25th of December 2016</em></p>
+
+<p>I&#39;ve just started using a new library called <a href="https://github.com/rserota/wad">WAD (Web Audio DAW)</a>to synthesize audio. My original first sound demo was meant to be a Soundcloud streaming application but I&#39;m waiting for my API key to be approved so for now I&#39;m going to go with the more long term idea of sequencing music and effects in code and hopefully even generating it efficiently with code.</p>
+
+<p>The pages for the site are built and styled (mostly?). This is the first time I&#39;ve had a working <a href="/gallery">gallery</a> and it&#39;s all powered by the <a href="https://github.com/paulbrzeski/Langenium-Universe">Universe</a> repository which is fantastic.</p>
+
+<h3>THREE.JS and Live2D are up and running</h3>
 
 <p><em>18th of December 2016</em></p>
 
@@ -54,6 +62,7 @@
     </div>
   </body>
   <script src="/vendor/jquery/dist/jquery.min.js"></script>
+  <script src="/vendor/wad/build/wad.min.js"></script>
   <script src="/vendor/Semantic-UI/dist/semantic.min.js"></script>
   <script src="/vendor/threejs/build/three.min.js"></script>
   <script src="/vendor/threejs/examples/js/controls/OrbitControls.js"></script>
