--- a/wiki/werp.html
+++ b/wiki/werp.html
@@ -61,7 +61,7 @@
       </div>
     </div>
   </body>
-  <script src="/vendor/jquery/dist/jquery.min.js"></script>
+  <script src="/vendor/jquery.min.js"></script>
   <script src="/vendor/wad/build/wad.min.js"></script>
   <script src="/vendor/Semantic-UI/dist/semantic.min.js"></script>
   <script src="/vendor/threejs/build/three.min.js"></script>
