--- a/games/ocean_scene.html
+++ b/games/ocean_scene.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sound (Music + SFX) | Game Demos | Langenium
+    <title>Ocean Scene | Game Demos | Langenium
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
@@ -21,13 +21,9 @@
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <h3>Sound (Music + SFX)</h3>
-        <p>These tests are used to evaluate various frameworks and techniques for producing sound and music in the browser (and eventually in the game).</p>
-        <div class="sound">
-          <h4>First attempt</h4>
-          <p> </p>
-          <div class="ui labeled icon button"> <i class="play icon"></i>Play</div>
-        </div>
+        <h3>Ocean Scene</h3>
+        <p>The planet Ibidan is covered entirely in ocean, with a few scattered islands and geographical features.</p>
+        <div class="ocean_scene"></div>
       </div>
     </div>
   </body>
@@ -360,7 +356,7 @@ void main() {
 }
   </script>
   <script src="/dist/logo.js"></script>
-  <script src="/dist/sound.js"></script>
+  <script src="/dist/ocean_scene.js"></script>
   <script>
     // Facebook Like Button.
     (function(d, s, id) {
