--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <p><em>25th of December 2016</em></p>
 
-<p>I&#39;ve just started using a new library called <a href="https://github.com/rserota/wad">WAD (Web Audio DAW)</a>to synthesize audio. My original first sound demo was meant to be a Soundcloud streaming application but I&#39;m waiting for my API key to be approved so for now I&#39;m going to go with the more long term idea of sequencing music and effects in code and hopefully even generating it efficiently with code.</p>
+<p>I&#39;ve just started using a new library called <a href="https://github.com/rserota/wad">WAD (Web Audio DAW)</a> to synthesize audio. My original first sound demo was meant to be a Soundcloud streaming application but I&#39;m waiting for my API key to be approved so for now I&#39;m going to go with the more long term idea of sequencing music and effects in code and hopefully even generating it efficiently with code.</p>
 
 <p>The pages for the site are built and styled (mostly?). This is the first time I&#39;ve had a working <a href="/gallery">gallery</a> and it&#39;s all powered by the <a href="https://github.com/paulbrzeski/Langenium-Universe">Universe</a> repository which is fantastic.</p>
 
@@ -64,9 +64,12 @@
   <script src="/vendor/jquery.min.js"></script>
   <script src="/vendor/wad/build/wad.min.js"></script>
   <script src="/vendor/Semantic-UI/dist/semantic.min.js"></script>
+  <script src="/vendor/threejs/examples/js/libs/dat.gui.min.js"></script>
   <script src="/vendor/threejs/build/three.min.js"></script>
   <script src="/vendor/threejs/examples/js/controls/OrbitControls.js"></script>
   <script src="/vendor/threejs/examples/js/loaders/ColladaLoader.js"></script>
+  <script src="/vendor/threejs/examples/js/SimplexNoise.js"></script>
+  <script src="/vendor/threejs/examples/js/GPUComputationRenderer.js"></script>
   <script src="/dist/Mirror.js"></script>
   <script src="/vendor/ocean/water-material.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
@@ -291,6 +294,99 @@ void main()
   vLightWeighting += vec3( 0.75, 0.75, 0.75 ) * dirSpecularWeight * n * 8.0;
 
   gl_FragColor *= vec4( vLightWeighting, 1.0 ); //
+}
+  </script>
+  <script id="heightmapFragmentShader" type="x-shader/x-fragment">#include <common>
+uniform vec2 mousePos;
+uniform float mouseSize;
+uniform float viscosityConstant;
+#define deltaTime ( 1.0 / 60.0 )
+#define GRAVITY_CONSTANT ( resolution.x * deltaTime * 3.0 )
+void main() {
+  vec2 cellSize = 1.0 / resolution.xy;
+  vec2 uv = gl_FragCoord.xy * cellSize;
+  // heightmapValue.x == height
+  // heightmapValue.y == velocity
+  // heightmapValue.z, heightmapValue.w not used
+  vec4 heightmapValue = texture2D( heightmap, uv );
+  // Get neighbours
+  vec4 north = texture2D( heightmap, uv + vec2( 0.0, cellSize.y ) );
+  vec4 south = texture2D( heightmap, uv + vec2( 0.0, - cellSize.y ) );
+  vec4 east = texture2D( heightmap, uv + vec2( cellSize.x, 0.0 ) );
+  vec4 west = texture2D( heightmap, uv + vec2( - cellSize.x, 0.0 ) );
+  float sump = north.x + south.x + east.x + west.x - 4.0 * heightmapValue.x;
+  float accel = sump * GRAVITY_CONSTANT;
+  // Dynamics
+  heightmapValue.y += accel;
+  heightmapValue.x += heightmapValue.y * deltaTime;
+  // Viscosity
+  heightmapValue.x += sump * viscosityConstant;
+  // Mouse influence
+  float mousePhase = clamp( length( ( uv - vec2( 0.5 ) ) * BOUNDS - vec2( mousePos.x, - mousePos.y ) ) * PI / mouseSize, 0.0, PI );
+  heightmapValue.x += cos( mousePhase ) + 1.0;
+  gl_FragColor = heightmapValue;
+}
+  </script>
+  <script id="smoothFragmentShader" type="x-shader/x-fragment">#include <common>
+uniform vec2 mousePos;
+uniform float mouseSize;
+uniform float viscosityConstant;
+#define deltaTime ( 1.0 / 60.0 )
+#define GRAVITY_CONSTANT ( resolution.x * deltaTime * 3.0 )
+void main() {
+  vec2 cellSize = 1.0 / resolution.xy;
+  vec2 uv = gl_FragCoord.xy * cellSize;
+  // heightmapValue.x == height
+  // heightmapValue.y == velocity
+  // heightmapValue.z, heightmapValue.w not used
+  vec4 heightmapValue = texture2D( heightmap, uv );
+  // Get neighbours
+  vec4 north = texture2D( heightmap, uv + vec2( 0.0, cellSize.y ) );
+  vec4 south = texture2D( heightmap, uv + vec2( 0.0, - cellSize.y ) );
+  vec4 east = texture2D( heightmap, uv + vec2( cellSize.x, 0.0 ) );
+  vec4 west = texture2D( heightmap, uv + vec2( - cellSize.x, 0.0 ) );
+  float sump = north.x + south.x + east.x + west.x - 4.0 * heightmapValue.x;
+  float accel = sump * GRAVITY_CONSTANT;
+  // Dynamics
+  heightmapValue.y += accel;
+  heightmapValue.x += heightmapValue.y * deltaTime;
+  // Viscosity
+  heightmapValue.x += sump * viscosityConstant;
+  // Mouse influence
+  float mousePhase = clamp( length( ( uv - vec2( 0.5 ) ) * BOUNDS - vec2( mousePos.x, - mousePos.y ) ) * PI / mouseSize, 0.0, PI );
+  heightmapValue.x += cos( mousePhase ) + 1.0;
+  gl_FragColor = heightmapValue;
+}
+  </script>
+  <script id="waterVertexShader" type="x-shader/x-vertex">#include <common>
+uniform vec2 mousePos;
+uniform float mouseSize;
+uniform float viscosityConstant;
+#define deltaTime ( 1.0 / 60.0 )
+#define GRAVITY_CONSTANT ( resolution.x * deltaTime * 3.0 )
+void main() {
+  vec2 cellSize = 1.0 / resolution.xy;
+  vec2 uv = gl_FragCoord.xy * cellSize;
+  // heightmapValue.x == height
+  // heightmapValue.y == velocity
+  // heightmapValue.z, heightmapValue.w not used
+  vec4 heightmapValue = texture2D( heightmap, uv );
+  // Get neighbours
+  vec4 north = texture2D( heightmap, uv + vec2( 0.0, cellSize.y ) );
+  vec4 south = texture2D( heightmap, uv + vec2( 0.0, - cellSize.y ) );
+  vec4 east = texture2D( heightmap, uv + vec2( cellSize.x, 0.0 ) );
+  vec4 west = texture2D( heightmap, uv + vec2( - cellSize.x, 0.0 ) );
+  float sump = north.x + south.x + east.x + west.x - 4.0 * heightmapValue.x;
+  float accel = sump * GRAVITY_CONSTANT;
+  // Dynamics
+  heightmapValue.y += accel;
+  heightmapValue.x += heightmapValue.y * deltaTime;
+  // Viscosity
+  heightmapValue.x += sump * viscosityConstant;
+  // Mouse influence
+  float mousePhase = clamp( length( ( uv - vec2( 0.5 ) ) * BOUNDS - vec2( mousePos.x, - mousePos.y ) ) * PI / mouseSize, 0.0, PI );
+  heightmapValue.x += cos( mousePhase ) + 1.0;
+  gl_FragColor = heightmapValue;
 }
   </script>
   <script src="/dist/logo.js"></script>
