Trying to get GPGPU shader working

--- a/games/ocean_scene.html
+++ b/games/ocean_scene.html
@@ -22,7 +22,9 @@
       </header>
       <div class="row">
         <h3>Ocean Scene</h3>
-        <p>The planet Ibidan is covered entirely in ocean, with a few scattered islands and geographical features.</p>
+        <p>The planet Ibidan is covered entirely in ocean, with a few scattered islands and geographical features.</p><span id="waterSize"></span>
+        <p>webgl gpgpu water</p><span id="options"> </span>
+        <p>Water size</p>
         <div class="ocean_scene"></div>
       </div>
     </div>
@@ -32,6 +34,7 @@
   <script src="/vendor/Semantic-UI/dist/semantic.min.js"></script>
   <script src="/vendor/threejs/examples/js/libs/dat.gui.min.js"></script>
   <script src="/vendor/threejs/build/three.min.js"></script>
+  <script src="/vendor/threejs/examples/js/libs/stats.min.js"></script>
   <script src="/vendor/threejs/examples/js/controls/OrbitControls.js"></script>
   <script src="/vendor/threejs/examples/js/loaders/ColladaLoader.js"></script>
   <script src="/vendor/threejs/examples/js/SimplexNoise.js"></script>
