--- a/games/sound.html
+++ b/games/sound.html
@@ -36,6 +36,7 @@
   <script src="/vendor/Semantic-UI/dist/semantic.min.js"></script>
   <script src="/vendor/threejs/examples/js/libs/dat.gui.min.js"></script>
   <script src="/vendor/threejs/build/three.min.js"></script>
+  <script src="/vendor/threejs/examples/js/libs/stats.min.js"></script>
   <script src="/vendor/threejs/examples/js/controls/OrbitControls.js"></script>
   <script src="/vendor/threejs/examples/js/loaders/ColladaLoader.js"></script>
   <script src="/vendor/threejs/examples/js/SimplexNoise.js"></script>
