Updated to use vendor Mirror.js file

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <script src="/vendor/threejs/examples/js/loaders/ColladaLoader.js"></script>
   <script src="/vendor/threejs/examples/js/SimplexNoise.js"></script>
   <script src="/vendor/threejs/examples/js/GPUComputationRenderer.js"></script>
-  <script src="/dist/Mirror.js"></script>
+  <script src="/vendor/threejs/examples/js/Mirror.js"></script>
   <script src="/vendor/ocean/water-material.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/framework/Live2DFramework.js"></script>
