--- a/games/ocean_scene.html
+++ b/games/ocean_scene.html
@@ -22,7 +22,8 @@
       </header>
       <div class="row">
         <h3>Ocean Scene</h3>
-        <p>The planet Ibidan is covered entirely in ocean, with a few scattered islands and geographical features.</p><span id="waterSize"></span>
+        <p>The planet Ibidan is covered entirely in ocean, with a few scattered islands and geographical features.</p>
+        <p>TODO: Reflections</p><span id="waterSize"></span>
         <p>webgl gpgpu water</p><span id="options"> </span>
         <p>Water size</p>
         <div class="ocean_scene"></div>
@@ -39,7 +40,7 @@
   <script src="/vendor/threejs/examples/js/loaders/ColladaLoader.js"></script>
   <script src="/vendor/threejs/examples/js/SimplexNoise.js"></script>
   <script src="/vendor/threejs/examples/js/GPUComputationRenderer.js"></script>
-  <script src="/dist/Mirror.js"></script>
+  <script src="/vendor/threejs/examples/js/Mirror.js"></script>
   <script src="/vendor/ocean/water-material.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/framework/Live2DFramework.js"></script>
