Tweaks to logo. Reflection looks better now :P

--- a/gallery/posters.html
+++ b/gallery/posters.html
@@ -65,7 +65,7 @@ void main()
     vec4 mvPosition = modelMatrix * vec4( position, 1.0 );
     vViewPosition = cameraPosition - mvPosition.xyz;
 
-    vTexCoord3D = .1 * ( position.xyz + vec3( -time, -time, -time ) );
+    vTexCoord3D = 11.1 * ( position.xyz + vec3( -time, -time, -time ) );
 
     gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
 }
@@ -115,15 +115,15 @@ vec4 colorFilter(float n) {
   vec4 color = vec4( vec3( 0.01 *n, 0.25 * n, .95 * n )  , 1.0 );
 
   color.r = limitColor(0.0, 0.05, color.r);
-  color.g = limitColor(0.025, 0.25, color.g);
-  color.b = limitColor (0.15, 0.75, color.b);
+  color.g = limitColor(0.015, 0.25, color.g);
+  color.b = limitColor (0.025, 0.75, color.b);
 
   return color;
 }
 
 void main() 
 {
-  float n = heightMap( vTexCoord3D );
+    float n = heightMap( vTexCoord3D );
 
     vec4 texColor = colorFilter( n );
 
@@ -156,7 +156,7 @@ void main()
 
   float dirSpecularWeight = 0.0;
   if ( dirDotNormalHalf >= 0.0 )
-    dirSpecularWeight = ( 1.0 - n ) * pow( dirDotNormalHalf, 5.0 );
+    dirSpecularWeight = ( 1.0 - n ) * pow( dirDotNormalHalf, 15.0 );
 
   vLightWeighting += vec3( 0.5, 0.5, 1.5 ) * dirSpecularWeight * n * 12.0;
 
@@ -176,7 +176,7 @@ void main()
     vec4 mvPosition = modelMatrix * vec4( position, 1.0 );
     vViewPosition = cameraPosition - mvPosition.xyz;
 
-    vTexCoord3D = 15.5 * ( position.xyz + vec3( time, time , time ) );
+    vTexCoord3D = 15.5 * ( position.xyz + vec3( -time, -time , -time ) );
 
     gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
 }
@@ -222,9 +222,9 @@ vec4 colorFilter(float n) {
 
   vec4 color = vec4( vec3( 0.25 *n, 0.25 * n, 0.25 * n )  , 1.0 );
 
-  color.r = limitColor(0.15, 0.45, color.r);
-  color.g = limitColor(0.15, 0.45, color.g);
-  color.b = limitColor (0.15, 0.45, color.b);
+  color.r = limitColor(0.1, 0.9, color.r);
+  color.g = limitColor(0.1, 0.9, color.g);
+  color.b = limitColor (0.1, 0.9, color.b);
 
   return color;
 }
@@ -233,20 +233,19 @@ void main()
 {
   float n = heightMap( vTexCoord3D );
 
-    vec4 texColor = colorFilter( n );
+  vec4 texColor = colorFilter( n );
 
-    // color
-    gl_FragColor = texColor;
+  // color
+  gl_FragColor = texColor;
   
   // normal
-
-  const float e = 0.0001;
+  const float e = .001;
 
   float nx = heightMap( vTexCoord3D + vec3( e, 0.0, 0.0 ) );
   float ny = heightMap( vTexCoord3D + vec3( 0.0, e, 0.0 ) );
   float nz = heightMap( vTexCoord3D + vec3( 0.0, 0.0, e ) );
 
-  vec3 normal = normalize( vNormal + 0.085 * vec3( n - nx, n - ny, n - nz ) / e );
+  vec3 normal = normalize( vNormal + .085 * vec3( n - nx, n - ny, n - nz ) / e );
 
   // diffuse light
 
@@ -264,9 +263,9 @@ void main()
 
   float dirSpecularWeight = 0.0;
   if ( dirDotNormalHalf >= 0.0 )
-    dirSpecularWeight = ( 1.0 - n ) * pow( dirDotNormalHalf, 5.0 );
+      dirSpecularWeight = ( 1.0 - n ) * pow( dirDotNormalHalf, 12.0 );
 
-  vLightWeighting += vec3( 0.75, 0.75, 0.75 ) * dirSpecularWeight * n * 8.0;
+  vLightWeighting += vec3( 0.75, 0.75, 0.75 ) * dirSpecularWeight * n * 22.0;
 
   gl_FragColor *= vec4( vLightWeighting, 1.0 ); //
 }
