--- a/wiki/characters--werp.html
+++ b/wiki/characters--werp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Wiki | Langenium
+    <title>Web Energy Research Project (WERP) | Wiki | Langenium
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
@@ -20,34 +20,44 @@
         </nav>
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
-      <div class="row">
-        <h2>Welcome to the Langenium Wiki</h2>
-        <ul>
-          <li>
-            <h3>Games (in order of development)</h3>
-            <ul>
-              <li><a href="/wiki/games--epoch-exordium.html">Epoch Exordium</a></li>
-              <li><a href="/wiki/games--airship-academy.html">Airship Academy</a></li>
-              <li><a href="/wiki/games--mmo.html">MMO</a></li>
-              <li><a href="/wiki/games--fall-of-the-elx.html">Fall of the Elx</a></li>
-            </ul>
-          </li>
-          <li>
-            <h3>Storylines</h3>
-            <ul>
-              <li>
-                <h3>Characters</h3>
-                <ul>
-                  <li><a href="/wiki/characters--werp.html">WERP</a></li>
-                </ul>
-              </li>
-              <li><a href="/wiki/storylines--2077.html">2077</a></li>
-              <li><a href="/wiki/storylines--2099.html">2099</a></li>
-              <li><a href="/wiki/storylines--2299.html">2299</a></li>
-            </ul>
-          </li>
-          <li><a href="/wiki/technology_of_2099.html">Technology of 2099</a></li>
-        </ul>
+      <div class="row"><h2>WERP (Web Energy Research Project)</h2>
+
+<p>Named WERP, or the Web Energy Research Project, as it was meant to learn and develop solutions based on information in the world wide web.</p>
+
+<p>Governing rules
+1. I must secure energy for the human race
+2. I must protect the human race at all costs</p>
+
+<p>Developed by a brand new Project Humanity as a way to guarantee progress on clean energy research and development and ensure the human race doesn&#39;t go extinct. It exists in a large spherical brain that was grown artificially in a lab. There are various cybernetic structures in it that are connected to fibre optics.</p>
+
+<p>It learns about how humans have wars and determines that they will never secure enough energy to sufficiently develop and leave the solar system, and will therefore die out. It&#39;s understanding is perverted by humanity&#39;s own recorded history, because it is learning from a reflection of humanity&#39;s self and so biases that are necessary for the human experience aren&#39;t part of it&#39;s worldview.</p>
+
+<p>From it&#39;s worldview, it determines that it&#39;s true purpose is to secure energy at all costs in order to protect the human race. Energy is key to all development, evolution and life.</p>
+
+<p>WERP lives in a permanently cloaked flying airship that can enter and exit the atmosphere, for security reasons. It can teleport it&#39;s signal to any computer n range, allowing it to effectively possess it. It can only do this if the existence of the human race is under threat. This was a mechanism to prevent man-made mass extinction events from occurring. </p>
+
+<p>It has a complex production facility built in, allowing it to both upgrade itself to build new technologies and to equip those technologies directly.</p>
+
+<p>A deep space probe contains readings of an unknown element &#39;sucking up&#39; light and then giving off electromagnetic energy that it didn&#39;t previously have. This is langenium and a huge concentration of it is detected on a habitable exoplanet known to humans as Ibidan (1 of 10 very similar planets in the system, however Ibidan has the higher langenium readings).</p>
+
+<p>Deciding that humanity was constantly on the brink of it&#39;s own self destruction, it realizes that it has to take steps to ensure that humanity doesn&#39;t destroy itself. Unfortunately, it doesn&#39;t have access to any weapons.</p>
+
+<p>It engineers a chain reaction in the Extra Large Hadron Collider that causes purely hydrogen particles to collide and trigger continuous fusion. In that moment, WERP is on the other side of the world and uses a quantum tunneling device to open a wormhole to Ibidan. It does it this way to create the maximum window of opportunity for the &#39;strongest&#39; humans to get through. The XLHC is in the center of Australia, meaning that the wormhole opens in the middle of the Atlantic. </p>
+
+<p>A mini-star begins to grow in Australia and starts to kill the planet. Meanwhile, the wormhole starts off microscopic and grows. Eventually it&#39;s discovered and a flying drone that&#39;s sent through discovers it&#39;s a habitable planet.</p>
+
+<p>The PH scientists notice that attempts to blow up the growing mini-star in the XLHC before it went critical caused the wormhole to expand. They then opt to detonate a devastating number of hydrogen bombs near the tiny star to further increase it&#39;s size so that planes can fly through it. </p>
+
+<p>After getting to Ibidan and manipulating the 3 factions to form, WERP is damaged by the aliens while it&#39;s out scouting and loses it&#39;s ability to cloak. It then returns to a puzzled early Union faction, who hook the ship up as a new central computer once they realize it is the most sophisticated remainder of human technology from Earth. </p>
+
+<p>At some point, WERP single-handedly hijacks the Union&#39;s security forces and assassinates the parliament. It is in direct control of the Union thereafter. </p>
+
+<hr/>
+
+<p>Quotes:</p>
+
+<p>&quot;If you really pay attention, the universe is all relative. Nothing is here or there, we&#39;re always moving, falling through space and time. Your position slows it down, but the real speed of the universe is the speed of light.&quot;
+&quot;You have a very single threaded way of looking at things.&quot;</p>
       </div>
     </div>
   </body>
